2005-02-23  Kjartan Maraas  <kmaraas@gnome.org>

	* src/yelp-db-pager.c: (node_get_title):
	* src/yelp-error.c:
	* src/yelp-html-gtkhtml1.c:
	* src/yelp-html-gtkhtml2.c:
	* src/yelp-index-model.c:
	* src/yelp-info-pager.c:
	* src/yelp-main.c:
	* src/yelp-man-pager.c:
	* src/yelp-man-parser.c:
	* src/yelp-pager.c:
	* src/yelp-pregenerate.c:
	* src/yelp-settings.c:
	* src/yelp-toc-pager.c: (process_xslt):
	* src/yelp-uri.c: (uri_locate_file), (uri_locate_file_lang):
	* src/yelp-utils.c: (locate_file_lang), (convert_ghelp_uri):
	* src/yelp-window.c: (yelp_window_load),
	(window_find_entry_changed_cb):
	* src/yelp-xslt-pager.c: Fix a bunch of warnings, port
	from gnome_i18n_* to the glib equivalents. Remove deprecated
	headers.

2005-02-22  Ross Burton  <ross@burtonini.com>

	* src/yelp-window.c:
	Add some casts.

2005-02-22  Ross Burton  <ross@burtonini.com>

	* src/yelp-utils.h:
	Add YELP_DOC_TYPE_XHTML.
	
	* src/yelp-utils.c:
	Handle application/xml+html as HTML.

	* src/yelp-window.c:
	Pass a MIME type to window_do_load_html.

2005-02-06  Kjartan Maraas  <kmaraas@gnome.org>

	* src/yelp-gecko-utils.cpp: Fix leak
	* src/yelp-utils.c: (yelp_doc_info_new): Don't free
	memory until you're finished using it. 
	* src/yelp-xslt-pager.c: (xslt_yelp_document): Fix leaks.
	GetPropInfo already allocates a new string so there's no
	need to g_strdup it again.

2005-02-04  Davyd Madeley  <davyd@madeley.id.au>

	* src/yelp-bookmarks.c: Add a missing t.

2005-02-04  Kjartan Maraas  <kmaraas@gnome.org>

	* src/yelp-bookmarks.c: (bookmarks_read): Fix leak and remove
	confusing goto:
	* src/yelp-toc-pager.c: (process_omf_pending), (process_read_menu):
	Fix leaks.
	* src/yelp-utils.c: (yelp_doc_info_new): Fix leak

2005-02-03  Shaun McCance  <shaunm@gnome.org>

	* data/scrollkeeper.xml:
	* data/toc.xml.in:
	- Added Preferences and Administration, per panel changes
	- Renamed Applets to Panel Applets

	* src/yelp-settings.c:
	* stylesheets/db2html.xsl.in:
	* stylesheets/toc2html.xsl: