@@ -1,3 +1,7 @@
+2005-02-23  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/yelp-main.c (main): do not leak display_name.
+
 2005-02-23  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* src/yelp-db-pager.c: (node_get_title):
